# SymQuPS

./: .gitignore  README.md  pyproject.toml  tutorial.ipynb
benchmarks/: run_and_plot.ipynb
doc/source/: conf.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
paper/: benchmark.ipynb  examples-of-use.ipynb
paper/benchmark-data/: benchmark_1_hattedstar.txt  benchmark_1_icgtransform.txt  benchmark_1_op_poly.txt  benchmark_1_op_rho.txt  benchmark_1_sc_W.txt  benchmark_1_sc_poly.txt  benchmark_1_star.txt  benchmark_2_hattedstar.txt  benchmark_2_icgtransform.txt  benchmark_2_op_poly.txt  benchmark_2_op_rho.txt  benchmark_2_sc_W.txt  benchmark_2_sc_poly.txt  benchmark_2_star.txt
src/: tutorial.ipynb
src/symqups/: __init__.py  bopp.py  cg.py  eom.py  manipulations.py  ordering.py  quantization.py  simple.py  star.py  utils.py
symqups/: __init__.py  bopp.py  cg.py  eom.py  hatted_star_product.py  manipulations.py  ordering.py  quantization.py  simple.py  star.py  star_product.py  star_product_dual.py  utils.py
symqups/_internal/: basic_routines.py  cache.py  constants.py  expr.py  grouping.py  math.py  mul.py  multiprocessing.py  operator_handling.py  parameters.py  (+5 more)
testing/: conftest.py  readme  readme.txt  test_basic_routines.py  test_bopp.py  test_cg.py  test_internal_math.py  test_internal_patches.py  test_multiplication.py  test_multiprocessing.py  test_object_instantiation.py  test_object_manipulation.py  test_operator_handling.py  test_operator_ordering.py  test_quantization.py  test_s_parameter.py  test_star.py  test_star_product.py  utils.py
(+79 files in other folders)
